--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,10 @@
 body {
-  display: flex;
-  flex-wrap: wrap;
   margin: 0;
-  padding: 0;
+  padding: 0 2vw;
   height: 100vh;
-  /* cursor: url(./images/circle.png), auto; */
-  cursor: cell;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .one-pixel {
@@ -15,4 +14,55 @@ body {
 
 .one-pixel:hover {
   transform: scale(4.5);
+}
+
+.color-zone {
+  height: 75vh;
+  width: 75vw;
+  display: flex;
+  flex-wrap: wrap;
+  cursor: cell;
+  border-radius: 2px;
+  box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.4);
+}
+
+.selector {
+  height: 75vh;
+  width: 20vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 2px;
+  box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.4);
+}
+
+.selected-color {
+  height: 18vh;
+  width: 18vh;
+  border: 1px solid black;
+}
+
+.popover {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #5a5a5a;
+  color: white;
+  height: 4vh;
+  width: 4vw;
+  padding: 4px;
+  border-radius: 2px;
+  font-size: 2vh;
+  z-index: 100;
+}
+
+.popover h4 {
+  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+  -moz-user-select: none; /* mozilla browsers */
+  -khtml-user-select: none; /* webkit (konqueror) browsers */
+  -ms-user-select: none; /* IE10+ */
+  background-color: #5a5a5a;
 }
